/**
 * https://github.com/grpc/grpc/blob/master/doc/health-checking.md
 *
 * Huan(202110): is there an already existing proto file for health checking?
 *  (instead of copy/paste at here)
 */
syntax = "proto3";

package wechaty.puppet;

option csharp_namespace = "github.wechaty.grpc.puppet";
option go_package       = "github.com/wechaty/go-grpc/wechaty";
option java_package     = "io.github.wechaty.grpc";

enum ServingStatus {
  SERVING_STATUS_UNSPECIFIC = 0;
  SERVING_STATUS_SERVING = 1;
  SERVING_STATUS_NOT_SERVING = 2;
  SERVING_STATUS_SERVICE_UNKNOWN = 3;  // Used only by the Watch method.
}

message HealthCheckRequest {
  string service = 1;
}

message HealthCheckResponse {
  ServingStatus status = 1;
}

service Health {
  rpc Check(HealthCheckRequest) returns (HealthCheckResponse);
  rpc Watch(HealthCheckRequest) returns (stream HealthCheckResponse);
}
